--- a/pyspark/00_spark_installation.qmd
+++ b/pyspark/00_spark_installation.qmd
@@ -9,7 +9,7 @@ Spark shell supports scala, Python and R.
 * [Spark Download Page](https://learning.oreilly.com/library/view/learning-spark-2nd/9781492050032/ch02.html)  
 * Select "Pre-built for Apache Hadoop 3.3 and later"  
 * Download Spark  
-![Downloading Spark](/Images/installing_spark.png)  
+* ![Downnloading Spark](/Images/installing_spark.png)  
 * Java 8 or above needs to be installed on your machine  
 * [Java Download Link](https://www.oracle.com/java/technologies/downloads/#java11)  
 * Download `bin.tar.gz` file  
@@ -56,6 +56,9 @@ ls
 conda create -n spark_learn python==3.10
 conda activate spark_learn
 pip install pyspark
+pip install pyspark[sql]
+pip install pyspark[pandas_on_spark] plotly
+pip install pyspark[connect]
 pyspark
 spark.version
 ```
