--- a/pyspark/03_spark_sql.ipynb
+++ b/pyspark/03_spark_sql.ipynb
@@ -13,13 +13,12 @@
    "metadata": {},
    "source": [
     "Spark SQL:  \n",
-    "* Spark SQL is the engine on which structured API's are built\n",
-    "* Can read and write data in a variety of formats\n",
-    "* Can query data using JDBC/ODBC connectors\n",
-    "* Provides a programmatic interface to interact with structured data stored as tables or views in a database from a spark application  \n",
-    "* Provides an interactive shell to write sql queries  \n",
-    "  \n",
-    "![Spark SQL](/home/thulasiram/personal/data_engineering/Images/spark-sql.png)"
+    "* Spark SQL is the engine on which structured API's are built  \n",
+    "* Can read and write data in a variety of formats  \n",
+    "* Can query data using JDBC/ODBC connectors  \n",
+    "* Provides a programmatic interface to interact with structured data stored as tables or views in a database from a spark application    \n",
+    "* Provides an interactive shell to write sql queries      \n",
+    "![Spark SQL](/Images/spark-sql.png)"
    ]
   },
   {
